manifests/whatcheese/12-whatcheese-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatcheese-api
  namespace: whatcheese
  labels:
    app: whatcheese-api
    nginx-lb-component: whatcheese-api
spec:
  selector:
    matchLabels:
      app: whatcheese-api
  replicas: 1
  template:
    metadata:
      labels:
        app: whatcheese-api
    spec:
      serviceAccount: cheese-api-sa
      containers:
      - name: whatcheese-api
        image: tuxinvader/whatcheese-api:ocp
        #imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        ports:
#        - containerPort: 443
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: whatcheese-api
  namespace: whatcheese
spec:
  selector:
    app: whatcheese-api
  type: ClusterIP
  clusterIP: None
  ports:
#    - name: https
#      port: 443
#      targetPort: 443
#      protocol: TCP
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
